2001-07-24  Chema Celorio  <chema@celorio.com>

	* capplet-dir-view-html.c (html_create): set the usize of hte
	side bar a bit smaller. Also set the size of the glade file a bit
	wider

	* capplet-dir-view.c (capplet_dir_view_load_dir): set the title
	of the window to "Gnome Control Center : foo"

2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Set moniker property
	manually
	(capplet_control_launch): Remove double-free of the moniker
	(capplet_control_launch): Release and unref the property control
	in the event of an error
	(capplet_control_launch): Conclude that the capplet is already
	running only when the exception type is
	Bonobo/Moniker/InterfaceNotFound

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Put up an error dialog
	and abort the process if the capplet reports an error trying to
	resolve its moniker
	(capplet_control_launch): Don't connect the app's button signals
	if the app has just been destroyed

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (install-data-local): Uncomment

2001-07-19  Richard Hestilow  <hestilow@ximian.com>
	
	* Gnome.directory.in.in: Change name to "Main".

	* capplet-dir.c (capplet_new): Return NULL if program
	is not accessible.

	* capplet-dir-view.c (sidebar_populate): Don't show a directory
	if it is empty.

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* Removed debugging spew.

	* Removed most of the menu bar.

	* capplet-dir-view.c (about_menu_cb): Add Chema, jimmac, and myself
	to authors list.

	* capplet-dir-view-html.c (html_populate, html_write_row): Spacing
	fix.

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Added missing Gnome.directory.in.in

	* capplet-dir.c (capplet_control_launch): Don't give an error if
	the property control is NULL
